--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -9,37 +9,53 @@
         android:gravity="bottom" android:id="@+id/linearLayout">
 
     <ImageView
-            android:layout_width="58dp"
+            android:layout_width="70dp"
             android:layout_height="70dp"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
             app:srcCompat="@drawable/profiledefault"
             android:contentDescription="@string/nav_header_desc"
-            android:id="@+id/imageView"
+            android:id="@+id/userImageNavHeader"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent"
-    />
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/loginButtonNavHeader"
+            app:layout_constraintVertical_bias="0.9"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:text="@string/nav_header_title"
+            android:text="TullahN"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:id="@+id/textView2"
+            android:id="@+id/userNameNavHeader"
             tools:text="TullahN" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="@+id/imageView" app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/userImageNavHeader" app:layout_constraintStart_toEndOf="@+id/userImageNavHeader"
             android:layout_marginStart="8dp"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/nav_header_subtitle"
-            android:id="@+id/textView"
+            android:text="TullahN@g.com"
+            android:id="@+id/userEmailNavHeader"
             tools:text="TullahN@g.com"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintStart_toEndOf="@+id/userImageNavHeader"
             android:layout_marginStart="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+            app:layout_constraintTop_toBottomOf="@+id/userNameNavHeader"/>
+    <Button
+            android:text="LOGIN"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:id="@+id/loginButtonNavHeader"
+            android:background="@android:color/transparent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" android:onClick="loginBtnNavClicked" android:textAlignment="viewStart"/>
+    <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp" app:srcCompat="@drawable/addchannelbutton"
+            android:id="@+id/addChannelButton"
+            android:background="@android:color/transparent" android:scaleType="fitXY" android:padding="5dp"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:onClick="addChannelClicked"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
