--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -17,7 +17,7 @@
             android:id="@+id/userImageNavHeader"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="12dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/loginButtonNavHeader"
             app:layout_constraintVertical_bias="0.9"/>
@@ -30,8 +30,9 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:id="@+id/userNameNavHeader"
             tools:text="TullahN" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="@+id/userImageNavHeader" app:layout_constraintStart_toEndOf="@+id/userImageNavHeader"
-            android:layout_marginStart="8dp"/>
+            app:layout_constraintTop_toTopOf="@+id/userImageNavHeader"
+            app:layout_constraintStart_toEndOf="@+id/userImageNavHeader"
+            android:layout_marginStart="8dp" android:textColor="#ffffff"/>
 
     <TextView
             android:layout_width="wrap_content"
@@ -41,7 +42,7 @@
             tools:text="TullahN@g.com"
             app:layout_constraintStart_toEndOf="@+id/userImageNavHeader"
             android:layout_marginStart="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/userNameNavHeader"/>
+            app:layout_constraintTop_toBottomOf="@+id/userNameNavHeader" android:textColor="#ffffff"/>
     <Button
             android:text="LOGIN"
             android:layout_width="wrap_content"
@@ -49,7 +50,8 @@
             android:id="@+id/loginButtonNavHeader"
             android:background="@android:color/transparent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp" android:onClick="loginBtnNavClicked" android:textAlignment="viewStart"/>
+            android:onClick="loginBtnNavClicked" android:textAlignment="center" android:textColor="#ffffff"
+            android:layout_marginStart="4dp"/>
     <ImageButton
             android:layout_width="30dp"
             android:layout_height="30dp" app:srcCompat="@drawable/addchannelbutton"
