--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/app_bar_main"
-        tools:context=".MainActivity" tools:layout_editor_absoluteY="56dp">
+        tools:context=".Controller.MainActivity" tools:layout_editor_absoluteY="56dp">
 
     <TextView
             android:layout_width="0dp"
