--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -69,4 +69,13 @@
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:background="@color/colorPrimary"
             android:textColor="#ffffff" android:onClick="createUserClicked"/>
+    <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/createSpinner" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/createEmailText"
+            app:layout_constraintEnd_toEndOf="@+id/createPasswordText"
+            app:layout_constraintStart_toStartOf="@+id/createPasswordText" android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/createAvatarImageView"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
