--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,4 +51,12 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
             app:layout_constraintTop_toBottomOf="@+id/textView" android:background="@color/colorPrimary"
             android:textColor="#ffffff" android:onClick="loginCreateUserBtnClicked"/>
+    <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="88dp"
+            android:layout_height="92dp"
+            android:id="@+id/loginSpinner"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/loginLoginBtn"
+            app:layout_constraintBottom_toTopOf="@+id/textView"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
